B&L QA/objects/Shipping_Boxes__c.object
<CustomObject>
    <description>Container records from KNAPP, integrated via eGate / Cast Iron from BL_ELC_ASN_WRK. EMEA.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipping Boxes</relationshipLabel>
        <relationshipName>Shipping_Boxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Avato_Link__c</fullName>
        <formula>HYPERLINK(&quot;http://161.242.233.3/GSAConsole/ShipmentDirect/CS/Console/&quot;&amp;Shipment_Tracking_Ref__c, Shipment_Tracking_Ref__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Track &amp; Trace</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_No__c</fullName>
        <label>Box No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BELCG</fullName>
                </value>
                <value>
                    <fullName>CLRCG</fullName>
                </value>
                <value>
                    <fullName>DMBCG</fullName>
                </value>
                <value>
                    <fullName>EURCD</fullName>
                </value>
                <value>
                    <fullName>EURLC</fullName>
                </value>
                <value>
                    <fullName>FRACG</fullName>
                </value>
                <value>
                    <fullName>HEIDELBERG</fullName>
                </value>
                <value>
                    <fullName>ITACG</fullName>
                </value>
                <value>
                    <fullName>NETCG</fullName>
                </value>
                <value>
                    <fullName>NORCG</fullName>
                </value>
                <value>
                    <fullName>NORDC</fullName>
                </value>
                <value>
                    <fullName>SPACG</fullName>
                </value>
                <value>
                    <fullName>STLSC</fullName>
                </value>
                <value>
                    <fullName>STLSI</fullName>
                </value>
                <value>
                    <fullName>UNKCG</fullName>
                </value>
                <value>
                    <fullName>VCLSU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Container_No__c</fullName>
        <label>Container No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_System_ID__c</fullName>
        <description>Legacy System ID</description>
        <externalId>true</externalId>
        <label>Legacy System ID</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_No__c</fullName>
        <label>Line No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lot_Serial_ID__c</fullName>
        <label>Lot/Serial ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line Item</label>
        <referenceTo>Order_Line_Item__c</referenceTo>
        <relationshipLabel>Shipping Boxes</relationshipLabel>
        <relationshipName>Shipping_Boxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order_Header__c</referenceTo>
        <relationshipLabel>Shipping Boxes</relationshipLabel>
        <relationshipName>Shipping_Boxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty_Shipped__c</fullName>
        <label>Qty Shipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_To_Id__c</fullName>
        <label>Ship To Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Tracking_Ref__c</fullName>
        <label>Shipment Tracking Ref.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_History__c</fullName>
        <description>Lookup to the Shipment record</description>
        <label>Shipping History</label>
        <referenceTo>Shipping_History__c</referenceTo>
        <relationshipLabel>Shipping Boxes</relationshipLabel>
        <relationshipName>Shipping_Boxes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_Business_Unit__c</fullName>
        <label>Source Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUSTR</fullName>
                </value>
                <value>
                    <fullName>BELGM</fullName>
                </value>
                <value>
                    <fullName>DISPR</fullName>
                </value>
                <value>
                    <fullName>DMBLV</fullName>
                </value>
                <value>
                    <fullName>FRANC</fullName>
                </value>
                <value>
                    <fullName>ITALY</fullName>
                </value>
                <value>
                    <fullName>NETPR</fullName>
                </value>
                <value>
                    <fullName>NORDK</fullName>
                </value>
                <value>
                    <fullName>NORFI</fullName>
                </value>
                <value>
                    <fullName>NORNO</fullName>
                </value>
                <value>
                    <fullName>NORSE</fullName>
                </value>
                <value>
                    <fullName>POLND</fullName>
                </value>
                <value>
                    <fullName>PORTU</fullName>
                </value>
                <value>
                    <fullName>SPACM</fullName>
                </value>
                <value>
                    <fullName>SWICM</fullName>
                </value>
                <value>
                    <fullName>UNKGD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WayBill_No__c</fullName>
        <label>WayBill_No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Shipping Box</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Box-{0000000000}</displayFormat>
        <label>Box Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Boxes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>